--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </table>
 
     <!-- Review -->
-    <h2>How to Recover Funds from Alliance Trading Group 💰</h2>
+    <h2>What do users write in their reviews?</h2>
     <p>A quick look at comments on various review platforms reveals that market participants highly appreciate the level of service offered by this brokerage firm. Numerous reviews emphasize the friendly and prompt customer support, which is available on weekdays from 9:00 to 18:00. Customers also value the ability to resolve administrative issues swiftly through the personal account chat and social media channels.
         Additionally, the absence of fees for deposits and withdrawals is positively noted. Users can fund their accounts and withdraw profits using Credit Card, Crypto, or Bank Transfer without any hidden charges.
         A key factor in building a positive reputation is the availability of a personal manager, which is particularly popular among VIP clients. These specialists:</p>
